
DEPENDENT_OPTION( BUILD_APCI "Build APCI 2200/1032/1710 drivers for LXRT" OFF "BUILD_HARDWARE;OS_LXRT" OFF )

IF ( BUILD_APCI )

    # This gathers all the .cpp files into the variable 'SRCS'
    FILE( GLOB DEVSRCS dev/[^.]*.cpp )
    FILE( GLOB DEVHPPS dev/[^.]*.hpp )

    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/dev ${CMAKE_CURRENT_BINARY_DIR}/dev)

    GLOBAL_ADD_COMPONENT( orocos-apci ${DEVSRCS} )
    GLOBAL_ADD_INCLUDE( ocl/dev ${DEVHPPS} )

    ADD_SUBDIRECTORY( tests )

    SET(APCI1710_SSI_FREQ 100000 CACHE STRING "SSI Clock Frequency.")
    SET(APCI1710_SSI_PROFILE 21 CACHE STRING "SSI profile length")
    SET(APCI1710_SSI_POSITION_BITS 12 CACHE STRING "SSI Position bitlength")
    SET(APCI1710_SSI_TURN_BITS 9 CACHE STRING "SSI Turn bitlength")
    SET(APCI1710_SSI_UPDATE 500 CACHE STRING "SSI encoder reading frequency in Hz")
    SET(APCI1710_INC_COUNTER APCI1710_32BIT_COUNTER CACHE STRING "Counter type. one off APCI1710_32BIT_COUNTER or APCI1710_16BIT_COUNTER")
    SET(APCI1710_INC_MODE APCI1710_DOUBLE_MODE CACHE STRING "Counter mode. one off APCI1710_DOUBLE_MODE, APCI1710_QUADRUPLE_MODE, APCI1710_SIMPLE_MODE, APCI1710_DIRECT_MODE" )
    SET(APCI1710_INC_HYSTERESIS APCI1710_HYSTERESIS_ON CACHE STRING "Counter Hysteresis. one off APCI1710_HYSTERESIS_ON or APCI1710_HYSTERESIS_OFF")

    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/dev/apci-config.h.in ${CMAKE_CURRENT_BINARY_DIR}/dev/apci-config.h)

ELSE ( BUILD_APCI )

    MESSAGE( "BUILD_APCI : ${BUILD_APCI}" )

    SET(APCI1710_SSI_FREQ 100000 CACHE INTERNAL "SSI Clock Frequency.")
    SET(APCI1710_SSI_PROFILE 21 CACHE INTERNAL "SSI profile length")
    SET(APCI1710_SSI_POSITION_BITS 12 CACHE INTERNAL "SSI Position bitlength")
    SET(APCI1710_SSI_TURN_BITS 9 CACHE INTERNAL "SSI Turn bitlength")
    SET(APCI1710_SSI_UPDATE 500 CACHE INTERNAL "SSI encoder reading frequency in Hz")
    SET(APCI1710_INC_COUNTER APCI1710_32BIT_COUNTER CACHE INTERNAL "Counter type. one off APCI1710_32BIT_COUNTER or APCI1710_16BIT_COUNTER")
    SET(APCI1710_INC_MODE APCI1710_DOUBLE_MODE CACHE INTERNAL "Counter mode. one off APCI1710_DOUBLE_MODE, APCI1710_QUADRUPLE_MODE, APCI1710_SIMPLE_MODE, APCI1710_DIRECT_MODE" )
    SET(APCI1710_INC_HYSTERESIS APCI1710_HYSTERESIS_ON CACHE INTERNAL "Counter Hysteresis. one off APCI1710_HYSTERESIS_ON or APCI1710_HYSTERESIS_OFF")

ENDIF ( BUILD_APCI )


